kuber/app-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-event-consumer
  namespace: default
  labels:
    app: todo-event-consumer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-event-consumer
  template:
    metadata:
      labels:
        app: todo-event-consumer
    spec:
      containers:
        - name: consumer
          image: getting-started:1.6
          imagePullPolicy: Never
          command:
            - node
            - src/consumer.js
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
