kuber/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test
  name: test
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-17T19:29:09-04:00"
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '3000'
      labels:
        app: test
    spec:
      containers:
      - env:
        - name: MYSQL_HOST
          valueFrom:
            configMapKeyRef:
              key: MYSQL_HOST
              name: todo-app-config
        - name: MYSQL_USER
          valueFrom:
            configMapKeyRef:
              key: MYSQL_USER
              name: todo-app-config
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MYSQL_PASSWORD
              name: todo-app-secret
        - name: MYSQL_DB
          valueFrom:
            configMapKeyRef:
              key: MYSQL_DB
              name: todo-app-config
        - name: KAFKA_BROKERS
          value: my-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092
        - name: KAFKA_TOPIC
          value: todo-events
        - name: KAFKAJS_NO_PARTITIONER_WARNING
          value: "1"
        - name: NODE_OPTIONS
          value: --disable-warning=TimeoutNegativeWarning
        image: getting-started:1.6
        imagePullPolicy: Never
        name: getting-started
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
