kuber/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: todo-app
  namespace: default
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: test
  type: ClusterIP
